--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -30,9 +30,22 @@
 }
 .card .expand-icon {
 	position: absolute;
+	height: 20px;
+	width: 20px;
 	top: 10px;
 	right: 20px;
 	border-radius: 50%;
 	box-shadow: 3px 3px 18px 1px #e2e2e2;
-	padding: 0.1em;
+	/* padding: 5px; */
+	color: gray;
+	background-color: #c5c5c5;
+	font-size: 20px;
+	/* font-weight: 500; */
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	cursor: pointer;
+}
+.card-expanded {
 }
