--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -5,9 +5,9 @@
 	margin-bottom: 20px;
 }
 .search-bar input {
-	box-shadow: 3px 3px 18px 1px #e2e2e2;
+	box-shadow: 1px 1px 20px 3px #f3f3f3;
 	border: 1px solid #e5e5e5;
-	border-radius: 15px;
+	border-radius: 10px;
 	width: 100%;
 	height: 100%;
 	font-size: 18px;
