--- a/src/pages/ListView/ListView.css
+++ b/src/pages/ListView/ListView.css
@@ -7,3 +7,16 @@
 	box-shadow: 0px 1px 0px #e8e8e8;
 	border-radius: 15px;
 }
+
+.tags {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 5px 10px;
+	gap: 10px;
+}
+.tag {
+	background-color: #876f6f;
+	color: white;
+	border-radius: 5px;
+	padding: 5px;
+}
