--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,17 @@
 	margin-block-end: 0;
 	box-sizing: border-box;
 }
+h1,
+h2,
+h3 {
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+}
 body {
 	margin: 0;
 	padding-top: 40px;
+	padding: 40px 30px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
 		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
