Created logic for adding tags to individual cards

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -11,15 +11,18 @@
 	align-items: center;
 	gap: 30px;
 
-	-webkit-transition: height 0.5s ease-in-out;
-	-moz-transition: height 0.5s ease-in-out;
-	transition: height 0.5s ease-in-out;
+	color: #3503ff;
+	-webkit-transition: height 0.3s ease-in-out;
+	-moz-transition: height 0.3s ease-in-out;
+	transition: height 0.3s ease-in-out;
+
+	overflow: hidden;
 }
 .card-expanded {
-	height: 345px;
-	-webkit-transition: height 0.5s ease-in-out;
-	-moz-transition: height 0.5s ease-in-out;
-	transition: height 0.5s ease-in-out;
+	height: 400px;
+	-webkit-transition: height 0.3s ease-in-out;
+	-moz-transition: height 0.3s ease-in-out;
+	transition: height 0.3s ease-in-out;
 }
 .card .image {
 	height: 100%;
@@ -30,38 +33,38 @@
 .card img {
 	border-bottom-left-radius: 15px;
 	border-top-left-radius: 15px;
-	width: 200px;
-	height: 350px;
+	width: 240px;
+	height: 400px;
 	margin-top: -50px;
-	-webkit-transition: margin 0.5s ease-in-out;
-	-moz-transition: margin 0.5s ease-in-out;
-	transition: margin 0.5s ease-in-out;
+	-webkit-transition: margin 0.3s ease-in-out;
+	-moz-transition: margin 0.3s ease-in-out;
+	transition: margin 0.3s ease-in-out;
 }
 .card-expanded img {
 	margin-top: 0px;
-	-webkit-transition: margin 0.5s ease-in-out;
-	-moz-transition: margin 0.5s ease-in-out;
-	transition: margin 0.5s ease-in-out;
+	-webkit-transition: margin 0.3s ease-in-out;
+	-moz-transition: margin 0.3s ease-in-out;
+	transition: margin 0.3s ease-in-out;
 }
-.card h3 {
+.card .hero-name {
+	font-weight: 800;
 	font-size: 25px;
-	color: #3503ff;
 }
 .card p {
+	font-size: 14px;
 	font-weight: 400;
-	color: #3503ff;
 }
 .card .expand-icon {
 	position: absolute;
-	height: 20px;
-	width: 20px;
+	height: 40px;
+	width: 40px;
 	top: 10px;
 	right: 20px;
 	border-radius: 50%;
-	box-shadow: 3px 3px 18px 1px #e2e2e2;
+	/* box-shadow: 3px 3px 18px 1px #e2e2e2; */
 	/* padding: 5px; */
 	color: gray;
-	background-color: #c5c5c5;
+	background-color: #ffffff;
 	font-size: 20px;
 	/* font-weight: 500; */
 	text-align: center;
@@ -69,20 +72,73 @@
 	align-items: center;
 	display: flex;
 	cursor: pointer;
+	border: 0.5px solid #d4d4d4;
 }
 .hero-details {
 	/* overflow: hidden; */
+	margin-top: 250px;
+	-webkit-transition: margin-top 0.3s ease-in-out;
+	-moz-transition: margin-top 0.3s ease-in-out;
+	transition: margin-top 0.3s ease-in-out;
+}
+.hero-details-active {
+	margin-top: 0;
+	-webkit-transition: margin-top 0.3s ease-in-out;
+	-moz-transition: margin-top 0.3s ease-in-out;
+	transition: margin-top 0.3s ease-in-out;
 }
 .powers {
-	transition: display 0.5s ease-in-out;
-	transition-delay: 1s;
-	display: none;
+	opacity: 0;
+	transition: opacity 0.4s ease-in-out;
+	transition-delay: 0.3s;
 }
 powers-active {
-	transition: display 0.5s ease-in-out;
-	transition-delay: 1s;
-	display: block;
+	opacity: 1;
+	transition: opacity 0.4s ease-in-out;
+	transition-delay: 0.3s;
 }
-.powers h3 {
-	margin: 10px 0;
+.powers-heading {
+	font-weight: 700;
+	font-size: 18px;
+	margin: 5px 0;
+}
+
+/* tag section */
+.tags-section {
+}
+.tag-input {
+	display: flex;
+	height: 40px;
+}
+.tag-input .btn {
+	background-color: #808080;
+	color: white;
+	cursor: pointer;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	padding: 5px;
+}
+.tag-input input {
+	height: 100%;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	border: 1px solid #e5e5e5;
+	font-size: 18px;
+	padding: 0 0.4em;
+}
+
+.tag-input input:focus {
+	outline: 1px solid #e2e2e2;
+}
+.tags-section .tags {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 5px 10px;
+	gap: 10px;
+}
+.tags-section .tag {
+	background-color: #808080;
+	color: white;
+	border-radius: 5px;
+	padding: 5px;
 }
