--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -117,6 +117,7 @@ powers-active {
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
 	padding: 5px;
+	width: 30%;
 }
 .tag-input .btn :hover {
 	background-color: #e1e1e1;
@@ -128,6 +129,7 @@ powers-active {
 	border: 1px solid #e5e5e5;
 	font-size: 18px;
 	padding: 0 0.4em;
+	width: 70%;
 }
 
 .tag-input input:focus {
